Update expired domain from .xyz to .site

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="https://gokkulnath.xyz"> Gokkulnath T S</a></h1>
+        <h1 class="text-light"><a href="https://gokkulnath.site"> Gokkulnath T S</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/gokkulnath" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
           <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
@@ -66,12 +66,12 @@
 
       <nav class="nav-menu">
         <ul>
-          <li class="active"><a href="https://gokkulnath.xyz" onclick="window.scrollTo(0, 0);"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li class="active"><a href="https://gokkulnath.site" onclick="window.scrollTo(0, 0);"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#publication"><i class="bx bx-file-blank"></i> <span>Publications</span></a></li>
           <li><a href="#project"><i class="bx bx-book-content"></i> Project</a></li>
-          <li><a href="https://blog.gokkulnath.xyz/"><i class="bx bx-server"></i> Blog</a></li>
+          <li><a href="https://blog.gokkulnath.site/"><i class="bx bx-server"></i> Blog</a></li>
 <!--           <li><a href="#otheractivities"><i class="bx bx-briefcase"></i> Other Activities</a></li> -->
 
         </ul>
@@ -122,99 +122,103 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Skills Section ======= -->
-    <!-- <section id="skills" class="skills section-bg">
-      <div class="container">
 
-        <div class="section-title">
-          <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="row skills-content">
-
-          <div class="col-lg-6" data-aos="fade-up">
-
-            <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-
-            <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-
-      </div>
-    </section> -->
-    <!-- End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
       <div class="container">
 
         <div class="section-title">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
           <h2>Resume</h2>
           <p></p>
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <!-- <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>Gokkulnath T S</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and
-                  developing user-centered digital/print marketing material from initial concept to final, polished
-                  deliverable.</em></p>
-            </div> -->
+
+
+
+
+
+
+
+
+
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
@@ -322,28 +326,28 @@
                 <a href="https://gokkulnath.github.io/Tennis-Shot-Classification-9DOF/">Project Report</a>
               </ul>
             </div>
-<!-- 
-            <h3 class="resume-title">Publications</h3>
-            <div class="resume-item">
-              <h5>Tracking Inbound Enemy Missile for Interception from Target Aircraft Using Extended
-                Kalman Filter</h5>
-              <p><em>Gokkul Nath T.S., Sudheesh P., Jayakumar M</em></p>
-              <p>Mueller P., Thampi S., Alam Bhuiyan M., Ko R., Doss R., Alcaraz Calero J. (eds) Security in Computing
-                and Communications. SSCC 2016. Communications in Computer and Information Science, vol 625. Springer,
-                Singapore. <a href="https://link.springer.com/chapter/10.1007/978-981-10-2738-3_23">Link</a>
-              </p>
-            </div>
 
-              
 
-            <div class="resume-item">
-              <h5>A Novel Clustered Support Vector Machine with Reduced Support Vectors for Big Data Classification</h5>
-              <p><em>GokkulNath T.S., Ramanathan R</em></p>
-              <p> Reduction in number of Support Vector is essential because it reduces the computation complexity of the
-                model, which in turn gives the user the ability to implement real time applications on low power computing
-                devices and reduces hardware requirement.<a href="https://doi.org/10.36227/techrxiv.12895025.v1">Pre-Print</a>
-              </p>
-            </div> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
           </div>
@@ -459,96 +463,97 @@
           </div>
 
 
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox"
-                  title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox"
-                  title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox"
-                  title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox"
-                  title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox"
-                  title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox"
-                  title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox"
-                  title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox"
-                  title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div> -->
 
-        </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      </div>
       </div>
     </section><!-- End Project Section -->
 
@@ -556,134 +561,134 @@
 
 
 
-    <!-- ======= Other Activities Section ======= -->
-<!--     
-<section id="otheractivities" class="resume">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Other Activities</h2>
-          <p></p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Trainings:</h3>
-
-            <div class="resume-item">
-              <h4> Fast.ai International Fellow for Part 1 Version 2 Course </h4>
-              <h5>Oct 2017</h5>
-              <p>Seven week course on Practical Deep Learning taught by Prof. Jeremy Howard professor at The Data
-                Institute at USF. One of the Key outcomes on completion of the course is the ability to build State of
-                the Art models on major Vision based task and understanding the relevant theory.</p>
-            </div>
-
-
-            <div class="resume-item">
-              <h4>Product Development Trainee, Ashwin Electronics</h4>
-              <h5>Jul 2015</h5>
-              <p>Understood the engineering design of auto fare meters from concept to product phase. Further, Assessed
-                if any scope of improvement can be done. The training included discussion of advanced topics on embedded
-                system development and working in teams to test the product developed.</p>
-            </div>
-
-            <div class="resume-item">
-              <h4>Industrial Training, Heavy Alloy Penetrator Project, Ministry Of Defence</h4>
-              <h5>Jun 2015</h5>
-              <p>Exposed to manufacturing process and machining process using powder metallurgy and high precision CNC
-                technology respectively. Further, got acquainted with operations of CNC and G-codes. End to End
-                manufacturing of Armor Piercing Anti Tank Missile was Studied.</p>
-            </div>
-
-            <div class="resume-item">
-              <h4>In-plant Training, Central Electronics Engineering Research Institute (CEERI), India</h4>
-              <h5>Dec 2014</h5>
-              <p>Strengthened technical skills to incorporate and realize industrial etiquette like safety priorities
-                for plant/machine inspection, problem solving, and managerial
-                skill sets. Examined various industrial research methodology and Operations ranging from product
-                Inspection. Exposure to Machine Vision and Computer vision based food inspection, fault detection of
-                metal sheets and screening using automation.</p>
-            </div>
 
 
 
-            <h3 class="resume-title">Postions of Resposibility</h3>
 
-            <div class="resume-item">
-              <ul>
-                <li>
-                  <p><em>Workshop Co-ordinator Sixth Sense Robotics, Anokha 2016.</em></p>
-                </li>
-                <li>
-                  <p><em>Technical Stall Manager, Anokha 2015.</em></p>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
-            <h3 class="resume-title">Events and Workshops</h3>
-            <div class="resume-item">
-              <ul>
-                <li>
-                  <p><em> <strong>National Level Workshop on Biomedical Signal Acquisition & Conditioning- BiSAC 2015
-                        :</strong> Got
-                      insight to the various types of Bio Medical signals acquired, the causes for some of the possible
-                      problems and probable solutions.</em></p>
-                </li>
-                <li>
-                  <p><em><strong>National Level Workshop on Network Simulator (NS2)::</strong> Hand on Experience in
-                      programming and
-                      simulation of wired and wireless sensor network with various design examples.</em></p>
-                </li>
-                <li>
-                  <p><em> <strong>IETE Workshop on Soft Computing Techniques:</strong> Introduction to Soft Computing
-                      Techniques like
-                      Fuzzy Logic, Genetic Algorithm, Simulated Annealing and Particle Swarm Optimization with Hands on
-                      Programming Experience using Matlab.</em></p>
-                </li>
-                <li>
-                  <p><em><strong>Green Electronics Symposium (Coimbatore): </strong> Organized By IETE Coimbatore held
-                      at
-                      Amrita Vishwa
-                      Vidhyapeedham to promote Engineers towards Eco Friendly Electronic Manufacturing various other
-                      factors.</em></p>
-                </li>
-                <li>
-                  <p><em><strong>National Workshop On Composite Materials (ICAD&M-2014):</strong> A Pre-conference
-                      workshop on
-                      'Composites and their applications in aerospace and automotive Field. Got Acquainted various
-                      Composite materials and their applications.</em></p>
-                </li>
-                <li>
-                  <p><em><strong>Electronics Rocks 2014:</strong> Surveyed regarding the recent trends and advancements
-                      in the
-                      electronics industry and got acquainted with field experts from various verticals of the
-                      Electronics industry. Expanded the horizons of understanding the scope of Electronic industry and
-                      its products.</em></p>
-                </li>
-                <li>
-                  <p><em><strong>DEFCON Bangalore 2013:</strong> First Event attended outside my city. Enhanced my
-                      awareness on Cyber Security and various security issues in Embedded
-                      Systems (SCADA-Stuxnet) and Internet (XSS Vulnerabilities, Mobile WEP Cracking) was
-                      discussed.</em></p>
-                </li>
 
-              </ul>
-            </div>
-          </div>
-        </div>
 
-        <div>
-          <a class="twitter-timeline" data-width="1000" data-height="600"  href="https://twitter.com/gokkulnath?ref_src=twsrc%5Etfw">Tweets by gokkulnath</a>
-          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  
-        </div>
-      </div>
-      
-    </section>
--->
-<!-- End Other Activities Section --> 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
@@ -720,3 +725,4 @@
 </body>
 
 </html>
+
